Fixed the image bounds. The overlay was stretching outside.

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -50,7 +50,8 @@ nav {
 
 .stats-table {
   display: flex;
-  width: 376px;
+  width: 100%;
+  max-width: 376px;
   height: 96px;
 
   /* Was here for debugging purposes */
@@ -98,4 +99,6 @@ nav {
 
 .section {
   margin-top: 0.75em;
+  width: 100%;
+  max-width: 376px;
 }
